<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_chip_navigation_bar_navigation_view"
        android:icon="@drawable/ic_menu"
        android:title="@string/text_setting"
        app:cnb_iconColor="@color/colorPrimaryLight" />

    <item
        android:id="@+id/menu_chip_navigation_bar_home"
        android:icon="@drawable/ic_home"
        android:title="@string/text_home"
        app:cnb_iconColor="@color/colorPrimaryLight" />

    <item
        android:id="@+id/menu_chip_navigation_bar_fight"
        android:icon="@drawable/ic_poem_fight"
        android:title="@string/text_poet_fight"
        app:cnb_iconColor="@color/colorPrimaryLight" />

    <item
        android:id="@+id/menu_chip_navigation_bar_poems"
        android:icon="@drawable/ic_users"
        android:title="@string/text_users"
        app:cnb_iconColor="@color/colorPrimaryLight" />

    <item
        android:id="@+id/menu_chip_navigation_bar_user_profile"
        android:icon="@drawable/ic_profile_user"
        android:title="@string/text_profile"
        app:cnb_iconColor="@color/colorPrimaryLight" />

</menu>