<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fillViewport="true"
    android:layoutDirection="rtl"
    tools:context=".activities.ContactUsActivity">

    <RelativeLayout
        android:id="@+id/fragment_users_view_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/background_top_layouts">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_poem_fight_text_view_poem_fight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/font_bold"
            android:text="@string/text_contact_us"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_users_button_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_circle_button_white"
            android:onClick="goToHome"
            android:padding="6dp"
            android:src="@drawable/ic_back" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fragment_users_view_top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_background_contact_us"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_asooda_owar"
                android:src="@drawable/image_asooda_owar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo_company_contact_us"
                android:layout_width="130dp"
                android:layout_height="110dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:src="@drawable/logo_asooda_awar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_company_contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo_company_contact_us"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/text_asooda_owar"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:id="@+id/view_under_company_name"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/text_company_contact_us"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:background="@color/grey_20" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_about_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_under_company_name"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/text_about_company"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_about_company_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_about_company"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/font_regular"
                android:text="@string/text_about_company_info"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_about_contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_about_company_info"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/text_contact_us_with"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_about_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_about_contact_us"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/text_address"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/act_contact_us_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_about_address"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24sp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_location" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_about_address_contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/text_address_info"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_about_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/act_contact_us_layout_address"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/text_email"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/act_contact_us_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_about_email"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24sp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_email" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_about_email_contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:gravity="end"
                    android:text="@string/text_email_info"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_about_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/act_contact_us_layout_email"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/text_phones"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/act_contact_us_layout_phone_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_about_phone"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24sp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:rotation="270"
                    android:src="@drawable/ic_call" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_about_phone_phone_number_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:gravity="end"
                    android:layoutDirection="ltr"
                    android:text="@string/text_phone_number_1"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/act_contact_us_layout_phone_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/act_contact_us_layout_phone_1"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24sp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:rotation="270"
                    android:src="@drawable/ic_call" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_about_phone_phone_number_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:gravity="end"
                    android:layoutDirection="ltr"
                    android:text="@string/text_phone_number_2"
                    android:textSize="18sp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>